...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter a username: "
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:singleLine="true" />
...

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickConfirm"
            android:text="Confirm"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
