<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".claims.CreateClaimActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/view_chain_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:text="@string/view_chain" />

        </LinearLayout>

            <EditText
                android:id="@+id/message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:gravity="start"
                android:hint="Claim Text"
                android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickSend"
            android:text="@string/send" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bluetooth_connection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_button"
                android:visibility="gone" />

        </LinearLayout>

        <android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="nl.tudelft.cs4160.trustchain_android.chainExplorer.ChainExplorerActivity">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />
        </android.widget.ScrollView>

               <android.support.v7.widget.RecyclerView
            android:id="@+id/claims_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>