...
    <string name="current_funds">Current Funds</string>

    <string name="send">Send</string>
    <string name="developer_mode">Developer Mode</string>

    <!-- Menu -->
    <string name="menu_chainexplorer">My Chain</string>
    <string name="menu_clear_inbox">Clear Entire Inbox</string>
    <string name="menu_info">Info</string>
    <string name="menu_receive_offline">Receive offline</string>
    <string name="menu_change_bootstrap">Change bootstrap</string>
    <string name="menu_import_tokens">Import Tokens</string>
    <string name="menu_export_tokens">Export Tokens</string>
...
